--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name" : "cloudmusic",
+    "name" : "日王播放器",
     "appid" : "__UNI__D07ECB1",
     "description" : "",
     "versionName" : "1.0.0",
